examples/v0.3/errors/array_type_mismatch.nova
/*
Expected Error

Datatype mismatch.
*/

numbers: [N] = [
    1,
    2,
    3
]

numbers[0] = "hello"